connected twitter api and embedding

--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,9 @@ python-dotenv = "*"
 requests = "*"
 basilica = "*"
 tweepy = "*"
+flask = "*"
+flask-sqlalchemy = "*"
+flask-migrate = "*"
 
 [requires]
 python_version = "3.7"
