--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,8 @@ flask = "*"
 flask-sqlalchemy = "*"
 flask-migrate = "*"
 scikit-learn = "*"
+gunicorn = "*"
+psycopg2-binary = "*"
 
 [requires]
 python_version = "3.7"
