--- a/web_app/.env
+++ b/web_app/.env
@@ -9,3 +9,11 @@ TWITTER_API_KEY="HTR5eyLUCk7sz2ytCX7ai1quq"
 TWITTER_API_SECRET="KfBJblZ6m2u6TMwmzTXid877N2qbyOsyuJlwIe49BD68Cm9ERF"
 TWITTER_ACCESS_TOKEN="985535135956291585-5XLHzdkfX7FCXPUrFZOaJx7uMvfPQe6"
 TWITTER_ACCESS_TOKEN_SECRET="JNfpDTEZCwPDCFUYbQ0BRAeqiwggvmfcqVdxavBjUiAl8"
+
+
+
+heroku config:set BASICLIA_API_KEY="a665fb35-1cd4-ca73-1460-0dafdb13fcab"
+heroku config:set TWITTER_API_KEY="HTR5eyLUCk7sz2ytCX7ai1quq"
+heroku config:set TWITTER_API_SECRET="KfBJblZ6m2u6TMwmzTXid877N2qbyOsyuJlwIe49BD68Cm9ERF"
+heroku config:set TWITTER_ACCESS_TOKEN="985535135956291585-5XLHzdkfX7FCXPUrFZOaJx7uMvfPQe6"
+heroku config:set TWITTER_ACCESS_TOKEN_SECRET="JNfpDTEZCwPDCFUYbQ0BRAeqiwggvmfcqVdxavBjUiAl8"
